[gd_scene load_steps=2 format=3 uid="uid://d3jfk2k3l1l1"]

[ext_resource type="Script" path="res://scripts/scenes/MainStrategy.gd" id="1_q7w8e"]
[ext_resource type="Script" path="res://scripts/scenes/WorldMap.gd" id="2_worldmap"]

[node name="MainStrategy" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q7w8e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 320.0
offset_bottom = 300.0
theme_override_constants/separation = 10

[node name="ResourceLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Resources: Gold 0 | Souls 0"
horizontal_alignment = 1

[node name="GuardianButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Select Guardian"

[node name="RaidButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Raid (Simulation)"

[node name="EndTurnButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "End Turn"

[node name="TurnSummaryPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TurnSummaryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="TurnSummaryPanel/VBoxContainer"]
layout_mode = 2
text = "TURN SUMMARY"
horizontal_alignment = 1

[node name="SummaryLabel" type="Label" parent="TurnSummaryPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resources Collected: ...
Threat Level: ..."
horizontal_alignment = 1

[node name="CloseSummaryButton" type="Button" parent="TurnSummaryPanel/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="WorldMap" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 350.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_worldmap")

[node name="OperationsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = -20.0
offset_bottom = 150.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OperationsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TargetLabel" type="Label" parent="OperationsPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Target: Carne Village"
horizontal_alignment = 1

[node name="SpyButton" type="Button" parent="OperationsPanel/VBoxContainer"]
layout_mode = 2
text = "Send Hanzo (Spy)"

[node name="WarButton" type="Button" parent="OperationsPanel/VBoxContainer"]
layout_mode = 2
text = "Declare War"

[node name="AnnexButton" type="Button" parent="OperationsPanel/VBoxContainer"]
layout_mode = 2
text = "Annex (Vassalage)"

[node name="CloseOpButton" type="Button" parent="OperationsPanel/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="GuardianButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Select Guardian"

[node name="GuardianPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GuardianPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="GuardianPanel/VBoxContainer"]
layout_mode = 2
text = "Select your Guard"
horizontal_alignment = 1

[node name="AlbedoButton" type="Button" parent="GuardianPanel/VBoxContainer"]
layout_mode = 2
text = "Albedo (Tank)"

[node name="ShalltearButton" type="Button" parent="GuardianPanel/VBoxContainer"]
layout_mode = 2
text = "Shalltear (DPS)"

[node name="SasugaPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SasugaPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="ProposalLabel" type="Label" parent="SasugaPanel/VBoxContainer"]
layout_mode = 2
text = "Demiurge: 'Ainz-sama, shall we skin the invaders alive for scroll parchment?'"
autowrap_mode = 2

[node name="Option1Button" type="Button" parent="SasugaPanel/VBoxContainer"]
layout_mode = 2
text = "1. \"Umu, exactly as I thought.\" (Approve)"

[node name="Option2Button" type="Button" parent="SasugaPanel/VBoxContainer"]
layout_mode = 2
text = "2. \"Perhaps we should consider...\" (Modify)"

[node name="Option3Button" type="Button" parent="SasugaPanel/VBoxContainer"]
layout_mode = 2
text = "3. \"I shall leave the details to you.\" (Delegate)"

[connection signal="pressed" from="VBoxContainer/GuardianButton" to="." method="_on_GuardianButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RaidButton" to="." method="_on_RaidButton_pressed"]
[connection signal="pressed" from="VBoxContainer/EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
[connection signal="pressed" from="TurnSummaryPanel/VBoxContainer/CloseSummaryButton" to="." method="_on_CloseSummaryButton_pressed"]
[connection signal="pressed" from="OperationsPanel/VBoxContainer/SpyButton" to="." method="_on_SpyButton_pressed"]
[connection signal="pressed" from="OperationsPanel/VBoxContainer/WarButton" to="." method="_on_WarButton_pressed"]
[connection signal="pressed" from="OperationsPanel/VBoxContainer/AnnexButton" to="." method="_on_AnnexButton_pressed"]
[connection signal="pressed" from="OperationsPanel/VBoxContainer/CloseOpButton" to="." method="_on_CloseOpButton_pressed"]
[connection signal="pressed" from="GuardianPanel/VBoxContainer/AlbedoButton" to="." method="_on_AlbedoButton_pressed"]
[connection signal="pressed" from="GuardianPanel/VBoxContainer/ShalltearButton" to="." method="_on_ShalltearButton_pressed"]
[connection signal="pressed" from="SasugaPanel/VBoxContainer/Option1Button" to="." method="_on_Option1Button_pressed"]
[connection signal="pressed" from="SasugaPanel/VBoxContainer/Option2Button" to="." method="_on_Option2Button_pressed"]
[connection signal="pressed" from="SasugaPanel/VBoxContainer/Option3Button" to="." method="_on_Option3Button_pressed"]
